# cdle-assignment

./: .gitignore  README.md  benchmark-job.yml
benchmark/: Dockerfile  Makefile  benchmark_results.py  benchmark_results1.py  benchmark_setup.py  decorators.py  distributed_benchmark_results.py  local_benchmark_results copy.py  local_benchmark_results.py  pyproject.toml  reduce_parquet_file.py  run_cluster_distributed_benchmark.py  run_distributed_benchmark.py  run_local_benchmark.py  run_vm_single_node_benchmark.py
benchmark/benchmark_metrics/: metric_results_single_file.ipynb
benchmark/benchmarking_dask/: distributed_dask_benchmark copy.py  distributed_dask_benchmark.py  distributed_with_filtering_and_cache_dask_benchmark.py  distributed_with_filtering_dask_benchmark.py  local_dask_benchmark.py  local_with_filtering_and_cache_dask_benchmark.py  local_with_filtering_dask_benchmark.py  tasks.py
benchmark/benchmarking_joblib/: distributed_joblib_benchmark.py  local_joblib_benchmark.py  local_with_filtering_and_cache_joblib_benchmark.py  local_with_filtering_joblib_benchmark.py  tasks.py
benchmark/benchmarking_koalas/: distributed_koalas_benchmark.py  local_koalas_benchmark.py  local_with_filtering_and_cache_koalas_benchmark.py  local_with_filtering_koalas_benchmark.py  tasks.py
benchmark/benchmarking_modin/: distributed_modin_benchmark.py  local_modin_benchmark.py  local_with_filtering_and_cache_modin_benchmark.py  local_with_filtering_modin_benchmark.py  modin_distributed_config.py  tasks.py
benchmark/benchmarking_rapids/: distributed_rapids_benchmark.py  (+3 more)
(+33 files in other folders)
