[tool.poetry]
name = "cdle"
version = "0.1.0"
description = ""
authors = ["Robert Gleison"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
joblib = "^1.4.2"
modin = "^0.32.0"
pyspark = "^3.5.5"
dask = "^2025.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
